/*
Copyright 2023 Man Group Operations Limited

Use of this software is governed by the Business Source License 1.1 included in the file licenses/BSL.txt.

As of the Change Date specified in that file, in accordance with the Business Source License, use of this software will be governed by the Apache License, version 2.0.
*/
syntax = "proto3";

package arcticc.pb2.mongo_storage_pb2;

message Config {
    enum Flags {
        DEFAULT = 0;
    }

    string uri = 1; //The path to the mongo server
    uint32 flags = 2; // default is 0
    bool use_mock_storage_for_testing = 3;
}
